fixed layout on super stretched monitors

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -68,7 +68,7 @@
 .arrow {
   position: relative;
   color: rgba(85, 85, 85, 0.479);
-  top: 18rem;
+  top: 10rem;
   font-size: 2.5rem;
   animation: show-arrow 0s 3s forwards, move-arrow 1s infinite alternate;
   visibility: hidden;
