--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -101,6 +101,7 @@
   .project {
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
+    justify-content: center;
   }
   .projectImg {
     grid-column: 1 / span 8;
@@ -124,6 +125,14 @@
     grid-column: 2 / span 7;
     grid-row: 1/1;
     text-align: left;
+  }
+}
+
+@media screen and (min-width: 1550px) {
+  .project {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60vw;
   }
 }
 
